# device_hisilicon_hi3516dv300

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md
kernel/: BUILD.gn  build_kernel.sh  copy_modules.sh
sdk_linux/mpp/: BUILD.gn
updater/: init.cfg
