# Copyright (C) 2021 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

print("hi3516dv300_group in")
group("hi3516dv300_group") {
  deps = [
    "build:rc_files",
    "kernel:all_modules",
    "kernel:kernel",
    "sdk_linux/mpp:sdk_linux_mpp_group",

    #"sdk_linux/osdrv:sdk_linux_osdrv_group"
  ]
}
